--- a/trunk/frm/jdbadmin/lang/IT/procedure.xml
+++ b/trunk/frm/jdbadmin/lang/IT/procedure.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <jamp>
-	<page typeobj="page">
-		<tab1 label="PROCEDURE" />   
-		<text1 label=" - Utente: "/>
-    </page>
-</jamp> 
+	<page id="page">
+		<tab1 label="PROCEDURE" />
+		<text1 label=" - Utente: " />
+	</page>
+</jamp>
