--- a/trunk/frm/jdbadmin/lang/IT/function.xml
+++ b/trunk/frm/jdbadmin/lang/IT/function.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE jamp PUBLIC "jamp" "http://jamp.alyx.it/jamp.dtd">
 <jamp>
 	<page id="page">
 		<tab1 label="FUNZIONI" />
