--- a/trunk/frm/jdbadmin/lang/IT/server.xml
+++ b/trunk/frm/jdbadmin/lang/IT/server.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE jamp PUBLIC "jamp" "http://jamp.alyx.it/jamp.dtd">
+<!DOCTYPE jamp PUBLIC "jamp" "./../../../../jamp.dtd">
 <jamp>
 	<page id="page">
 		<text id="importtxt" label=" Importa :" />
 		<tab id="tab2" label="UTENTI" />
 		<dsnav id="dsnav">
-			<button>
-				<bt title="Ricarica i Privilegi" />
-			</button>
+			<buttons>
+				<button title="Ricarica i Privilegi" />
+			</buttons>
 		</dsnav>
 		<gridds id="gridds2" dsobj="ds2" width="autosize" height="autosize">
-			<header>
-				<head headlabel="Utenti" />
-				<head headlabel="Dati" />
-				<head headlabel="Struttura" />
-				<head headlabel="Viste" />
-				<head headlabel="Routine" />
-				<head headlabel="Generale" />
-				<head headlabel="Replica" />
-				<head headlabel="Utente" />
-				<head headlabel="Limitazioni" />
-			</header>
+			<heading>
+				<heads headlabel="Utenti" />
+				<heads headlabel="Dati" />
+				<heads headlabel="Struttura" />
+				<heads headlabel="Viste" />
+				<heads headlabel="Routine" />
+				<heads headlabel="Generale" />
+				<heads headlabel="Replica" />
+				<heads headlabel="Utente" />
+				<heads headlabel="Limitazioni" />
+			</heading>
 			<coloumn>
 				<text itemlabel="Utente" />
 				<text itemlabel="Host" />
