--- a/trunk/frm/jdbadmin/lang/IT/table.xml
+++ b/trunk/frm/jdbadmin/lang/IT/table.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE jamp PUBLIC "jamp" "http://jamp.alyx.it/jamp.dtd">
+<!DOCTYPE jamp PUBLIC "jamp" "./../../../../jamp.dtd">
 <jamp>
 	<page id="page">
 		<tab id="tab1" label="STRUTTURA">
 			<dsnav id="dsnav1">
-				<button>
-					<bt title="Visualizza/Nascondi SQL" />
-				</button>
+				<buttons>
+					<button title="Visualizza/Nascondi SQL" />
+				</buttons>
 			</dsnav>
 		</tab>
 		<tab id="tab21" label="INDICI" />
 		<dsnav	id="dsnav2">
-			<button>
-				<bt title="Primaria" />
-				<bt title="Univoca" />
-				<bt title="Indice" />
-				<bt title="Testo Completo" />
-			</button>
+			<buttons>
+				<button title="Primaria" />
+				<button title="Univoca" />
+				<button title="Indice" />
+				<button title="Testo Completo" />
+			</buttons>
 		</dsnav>
 		<tab id="tab22" label="CHIAVI ESTERNE" />
 		<dsnav id="dsnav23">
-			<button>
-				<bt title="chiave esterna" />
-			</button>
+			<buttons>
+				<button title="chiave esterna" />
+			</buttons>
 		</dsnav>
 		<tab id="tab2" label="DATI" />
 		<dsnav id="dsnav3">
-			<button>
-				<bt title="Svuota la Tabella" />
-				<bt title="Visualizza/Nascondi SQL" />
-			</button>
+			<buttons>
+				<button title="Svuota la Tabella" />
+				<button title="Visualizza/Nascondi SQL" />
+			</buttons>
 		</dsnav>
 		<gridds id="gridds1">
 			<coloumn>
