Add item: Status for show invalid views

--- a/trunk/frm/jdbadmin/lang/IT/views.xml
+++ b/trunk/frm/jdbadmin/lang/IT/views.xml
@@ -8,6 +8,7 @@
 				<text itemlabel="Nome" />
 				<text itemlabel="Utente" />
 				<text itemlabel="Host" />
+				<label itemlabel="Stato"/>
 			</coloumn>
 		</gridds>
 	</page>
